Création des dossier script et style,modification entity Post

--- a/src/OC/WebAgencyBundle/Resources/views/Post/viewPosts.html.twig
+++ b/src/OC/WebAgencyBundle/Resources/views/Post/viewPosts.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
  {% block body %}
-     <h1>Page affichage d'un post </h1>
+     <h1>Page d'affichage de tout les posts </h1>
 
-     Id du post {{ id }}
+
  {% endblock %}
