--- a/src/OC/WebAgencyBundle/Resources/views/Home/index.html.twig
+++ b/src/OC/WebAgencyBundle/Resources/views/Home/index.html.twig
@@ -1,4 +1,45 @@
 {% extends '::base.html.twig' %}
  {% block body %}
      <h1>Page d'accueil </h1>
+     <div class="page">
+         <nav class="navbar navbar-inverse navbar-fixed-top">
+             <div class="container-fluid">
+                 <div class="navbar-header">
+                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                         <span class="icon-bar"></span>
+                         <span class="icon-bar"></span>
+                         <span class="icon-bar"></span>
+                     </button>
+                     <a class="navbar-brand" href="#">WebSiteName</a>
+                 </div>
+                 <div class="collapse navbar-collapse" id="myNavbar">
+                     <ul class="nav navbar-nav">
+                         <li class="active"><a href="#">Home</a></li>
+                         <li><a href="{{ path('view_posts_route') }}">Blog</a></li>
+                         <li><a href="#">Page 2</a></li>
+                         <li><a href="#">Page 3</a></li>
+                     </ul>
+                     <ul class="nav navbar-nav navbar-right">
+                         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                     </ul>
+                 </div>
+             </div>
+         </nav>
+         <div class="back" id="section1">
+             <h3>THIS IS MY LIFE !!! </h3>
+             <div class="btn-header"><a class="btn-second" href="#section2">next</a></div>
+         </div>
+         <div class="back" id="section2">
+             <h3>WELCOME !!! </h3>
+             <div class="btn-header"><a class="btn-second" href="#section1">last</a>
+                 <a href="#section3" class="btn-second">next</a>
+             </div>
+         </div>
+
+         <div class="back" id="section3">
+             <h3>DANCEFLOOR !</h3>
+             <div class="btn-header"><a class="btn-second" href="#section2">last</a></div>
+         </div>
+     </div>
  {% endblock %}
