Ajout d'un champ category dans l'entité Post

--- a/src/OC/WebAgencyBundle/Resources/views/Post/viewPosts.html.twig
+++ b/src/OC/WebAgencyBundle/Resources/views/Post/viewPosts.html.twig
@@ -2,5 +2,13 @@
  {% block body %}
      <h1>Page d'affichage de tout les posts </h1>
 
+   <div class="container">
+       <ul>
+        {% for post in posts %}
+            <li>{{ post.name}}</li>
+        {% endfor %}
+        </ul>
+    </div>
+
 
  {% endblock %}
