--- a/src/OC/WebAgencyBundle/Resources/views/Home/index.html.twig
+++ b/src/OC/WebAgencyBundle/Resources/views/Home/index.html.twig
@@ -1,31 +1,7 @@
 {% extends '::base.html.twig' %}
+
  {% block body %}
-     <h1>Page d'accueil </h1>
-     <div class="page">
-         <nav class="navbar navbar-inverse navbar-fixed-top">
-             <div class="container-fluid">
-                 <div class="navbar-header">
-                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                         <span class="icon-bar"></span>
-                         <span class="icon-bar"></span>
-                         <span class="icon-bar"></span>
-                     </button>
-                     <a class="navbar-brand" href="#">WebSiteName</a>
-                 </div>
-                 <div class="collapse navbar-collapse" id="myNavbar">
-                     <ul class="nav navbar-nav">
-                         <li class="active"><a href="#">Home</a></li>
-                         <li><a href="{{ path('view_posts_route') }}">Blog</a></li>
-                         <li><a href="#">Page 2</a></li>
-                         <li><a href="#">Page 3</a></li>
-                     </ul>
-                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="{{ 'register' }}"><span class="glyphicon glyphicon-user"></span>Espace client</a></li>
-                         <li><a href="{{ 'login' }}"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
-                     </ul>
-                 </div>
-             </div>
-         </nav>
+     {{ include("OCWebAgencyBundle:inc:header.html.twig") }}
          <div class="back" id="section1">
              <h3>THIS IS MY LIFE !!! </h3>
              <div class="btn-header"><a class="btn-second" href="#section2">next</a></div>
